multiple fixes
TEC-1897: Date errors when copying between sheets using Ctrl+C and Ctrl+V
TEC-1890: Cannot copy content in viewer side
TEC-1889: Links are clickable for owners but not viewers
TEC-1863: Numeric values in checkbox cut off during data validation
TEC-1832: Formatting is not applied on the entire column
TEC-1810: Date formula issues
TEC-1306: Ability to insert a hyperlink on selected text within a cell
TEC-1860: Fill shortcuts bugs
TEC-1873: After enter in cell input field select-focus went to hidden row or column cell, should jump to next visible cell only
TEC-1808: Toolbar shows incorrect text and background color for selected cell
TEC-1893: changes not syncing correctly in duplicated new sub sheet
TEC-1886: Copy paste formula from dsheet to dsheet broken
TEC-1762: Hyperlinks bugs

--- a/package/styles/index.css
+++ b/package/styles/index.css
@@ -5,9 +5,7 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
-
   ul,
   ol {
     list-style: revert;
@@ -48,7 +46,6 @@ body {
 }
 
 .fortune-read-only {
-
   .luckysheet-rich-text-editor,
   .luckysheet-sheets-item-function,
   .fortune-sheettab-button,
@@ -59,7 +56,7 @@ body {
   /* Hide link editing UI but allow viewing popover in read-only mode */
   .fortune-link-modify-modal:not(.link-toolbar),
   .fortune-link-cards-container,
-  .fortune-link-card,
+  .fortune-link-card.fortune-link-card--editing,
   .fortune-link-type-select,
   .fortune-link-type-dropdown,
   .fortune-input-with-icon,
@@ -70,10 +67,6 @@ body {
     display: none !important;
   }
 
-  /* Hide edit and remove buttons in link toolbar but keep "Open link" */
-  .fortune-link-modify-modal.link-toolbar .fortune-toolbar-button:not(:first-child) {
-    display: none !important;
-  }
 }
 
 .fortune-tooltip {
